use helper functions to display sidebar nav by names - not letters

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,8 +1,7 @@
 <%= content_for :sidebar do %>
   <%= tag.div class:'category_list' do %>
-    <% @categories.each do |category| %>
-      <%= link_to category.name, category_path(category), class:"category-link" %>
-    <% end %>
+    <%= display_side_az_list %>
+
   <% end %>
 <% end %>
 
