updated name to GiftFor

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <%= tag.div class:"top_bar" do %>
   <%= tag.div class:"logo" do %>
-    <%= tag.h1 link_to "Wishlist!", root_path %>
+    <%= tag.h1 link_to "GiftFor", root_path %>
   <% end %>
   <%= tag.div class:"search" do %>
     <%= render 'gifts/aws_search_form' %>
