--- a/app/views/categories/_list_wishlists.html.erb
+++ b/app/views/categories/_list_wishlists.html.erb
@@ -1,4 +1,4 @@
-<%= tag.h3 "Wishlists" %>
+<%= tag.h3 "Gift Guides" %>
 <%= tag.ul class:"wishlists" do %>
   <% category_top_users(category).each do |user| %>
     <%= tag.li do %>
