--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -18,7 +18,7 @@
 <script id="category-template" type="text/x-handlebars-template">
   <h1>Category: {{category.name}}</h1>
   <div class="big_box category_show">
-    <h3>Wishlists</h3>
+    <h3>Gift Guides</h3>
     <ul class="wishlists">
       {{#each category.users}}
         <li>
