--- a/app/views/gifts/_aws_search.html.erb
+++ b/app/views/gifts/_aws_search.html.erb
@@ -16,7 +16,7 @@
           <%= g.fields_for :categories do |cat| %>
             <%= cat.hidden_field :name %>
           <% end %>
-          <%= g.submit "Add to Wishlist", class:"card_button"%>
+          <%= g.submit "Add to Gift Guide", class:"card_button"%>
         <% end %>
       <% end %>
     <% end %>
