--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <ul class="nav">
   <li><%= link_to "Home", root_path %></li>
-  <li><%= link_to "My Wishlist", list_path(current_user.list) if user_signed_in? %></li>
+  <li><%= link_to "My Gift Guide", list_path(current_user.list) if user_signed_in? %></li>
   <li><%= link_to "My Reviews", user_reviews_path(current_user) if user_signed_in? %></li>
   <li><%= link_to "Categories", categories_path %></li>
   <li><%= link_to "Sign In", new_user_session_path if !user_signed_in? %></li>
