--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,5 +7,6 @@
   <% end %>
   <%= tag.div class:"welcome" do %>
     <%= link_to "Welcome #{current_user.username}", edit_user_registration_path if user_signed_in? %>
+    <%= link_to "Sign In", new_user_session_path if !user_signed_in? %>
   <% end %>
 <% end %>
